gitops/platform/infisical/exposure/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infisical
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: traefik
      sectionName: http
  
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: traefik
      sectionName: https
  
  hostnames:
    - infisical.okbear.dev
  
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: infisical
          port: 8080
          weight: 1
